@@ -1,3 +1,9 @@
+Development Portal (2014-11-18 shi)
+==============================
+Bug fix for CRS table header
+Bug fix for colours and headers in High Vis
+
+
 Development Portal (2014-11-14 shi)
 ==============================
 BETA alert across the site
